fix tooltip z-index

--- a/SwitchCase.Razor/Tooltip.razor.css
+++ b/SwitchCase.Razor/Tooltip.razor.css
@@ -18,7 +18,7 @@ span {
     text-align: center;
     padding: 5px 10px;
     border-radius: 6px;
-    z-index: 1;
+    z-index: 10000;
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s;
